se inicia el diseño de la seccion en la que se mostrarán los productos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
         <!-- ---------------------------------------------------------------------------------------------------------- -->
         <!-- ------------------------------------------- Grilla de productos ------------------------------------------ -->
         <!-- ---------------------------------------------------------------------------------------------------------- -->
-        <main class="productos">Productos</main>
+        <main class="productos">
+            <article class="producto-1">
+                Producto 1
+            </article>
+            <article class="producto-2">
+                Producto 2
+            </article>
+            <article class="producto-3">
+                Producto 3
+            </article>
+            <article class="producto-4">
+                Producto 4
+            </article>
+        </main>
         <!-- ---------------------------------------------------------------------------------------------------------- -->
         <!-- ---------------------------------------------- Pie de página --------------------------------------------- -->
         <!-- ---------------------------------------------------------------------------------------------------------- -->
