ajustes en el diseño de las tarjetas

--- a/index.html
+++ b/index.html
@@ -45,17 +45,49 @@
         <!-- ------------------------------------------- Grilla de productos ------------------------------------------ -->
         <!-- ---------------------------------------------------------------------------------------------------------- -->
         <main class="productos">
+            <!-- -------- Card 1 -------- -->
             <article class="producto-1">
-                Producto 1
+                <!-- <div class="card-body"> -->
+                    <div class="bg-producto-1"></div>
+                <!-- </div> -->
+                <h2>Perfume</h2>
+                <p class="precio">10.000</p>
+                <button>
+                    <p>Comprar</p>
+                </button>
             </article>
+            <!-- -------- Card 2 -------- -->
             <article class="producto-2">
-                Producto 2
+                <!-- <div class="card-body"> -->
+                    <div class="bg-producto-2"></div>
+                <!-- </div> -->
+                <h2>Ropa</h2>
+                <p class="precio">10.000</p>
+                <button>
+                    <p>Comprar</p>
+                </button>
             </article>
+            <!-- -------- Card 3 -------- -->
             <article class="producto-3">
-                Producto 3
+                <!-- <div class="card-body"> -->
+                    <div class="bg-producto-3"></div>
+                <!-- </div> -->
+                <h2>Accesorio</h2>
+                <p class="precio">10.000</p>
+                <button>
+                    <p>Comprar</p>
+                </button>
             </article>
+            <!-- -------- Card 4 -------- -->
             <article class="producto-4">
-                Producto 4
+                <!-- <div class="card-body"> -->
+                    <div class="bg-producto-4"></div>
+                <!-- </div> -->
+                <h2>Zapato</h2>
+                <p class="precio">10.000</p>
+                <button>
+                    <p>Comprar</p>
+                </button>
             </article>
         </main>
         <!-- ---------------------------------------------------------------------------------------------------------- -->
