--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <!-- -------- Card 1 -------- -->
             <article class="producto-1">
                 <!-- <div class="card-body"> -->
-                    <div class="bg-producto-1"></div>
+                <div class="bg-producto-1"></div>
                 <!-- </div> -->
-                <h2>Perfume</h2>
-                <p class="precio">10.000</p>
+                <h2>Perfume LadyStar</h2>
+                <h4 class="precio">45.990</h4>
                 <button>
                     <p>Comprar</p>
                 </button>
@@ -59,10 +59,10 @@
             <!-- -------- Card 2 -------- -->
             <article class="producto-2">
                 <!-- <div class="card-body"> -->
-                    <div class="bg-producto-2"></div>
+                <div class="bg-producto-2"></div>
                 <!-- </div> -->
-                <h2>Ropa</h2>
-                <p class="precio">10.000</p>
+                <h2>Polera Deportiva</h2>
+                <p class="precio">15.990</p>
                 <button>
                     <p>Comprar</p>
                 </button>
@@ -70,10 +70,10 @@
             <!-- -------- Card 3 -------- -->
             <article class="producto-3">
                 <!-- <div class="card-body"> -->
-                    <div class="bg-producto-3"></div>
+                <div class="bg-producto-3"></div>
                 <!-- </div> -->
-                <h2>Accesorio</h2>
-                <p class="precio">10.000</p>
+                <h2>Cartera Negra Star</h2>
+                <h4 class="precio">38.490</h4>
                 <button>
                     <p>Comprar</p>
                 </button>
@@ -81,10 +81,10 @@
             <!-- -------- Card 4 -------- -->
             <article class="producto-4">
                 <!-- <div class="card-body"> -->
-                    <div class="bg-producto-4"></div>
+                <div class="bg-producto-4"></div>
                 <!-- </div> -->
-                <h2>Zapato</h2>
-                <p class="precio">10.000</p>
+                <h2>Zapato Negro Star</h2>
+                <p class="precio">55.990</p>
                 <button>
                     <p>Comprar</p>
                 </button>
